src/objects/Sales_Analytics__c.object
<CustomObject>
    <description>Standalone object with no relationship with any other objects. Populated by integration and used as Dataset for WAVE.
Object Owners : Mattias, Majdi, and Tobias</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Analytics</relationshipLabel>
        <relationshipName>Sales_Analytics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Number__c</fullName>
        <label>Address Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIM360Id__c</fullName>
        <externalId>true</externalId>
        <label>CIM 360 ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Code__c</fullName>
        <label>Campaign Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyCode__c</fullName>
        <label>Company Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractTemplateName__c</fullName>
        <label>Contract Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Voucher__c</fullName>
        <label>Contract/Voucher ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Order_Number__c</fullName>
        <label>Customer Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Branch__c</fullName>
        <label>Dealer Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveredToCimId__c</fullName>
        <label>Delivered To CIM ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Model__c</fullName>
        <label>Discount Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DistributorId__c</fullName>
        <label>Distributor Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERPNumber__c</fullName>
        <label>ERP Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErpCustomerLocationCode__c</fullName>
        <label>ERP Customer Location Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErpCustomerNumber__c</fullName>
        <label>ERP Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GDWUniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>GDW Unique Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>InvoiceCurrencyPreciousMetalsValue__c</fullName>
        <label>Invoice Currency Precious Metals Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Line__c</fullName>
        <label>Invoice Line</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsKitHeader__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if this record is a header line for a kit.</description>
        <label>Is Kit Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsKitItem__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if this record is an item in a kit.</description>
        <label>Is Kit Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KitGlobalSKU__c</fullName>
        <label>Kit Global SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KitHeaderGDWUniqueKey__c</fullName>
        <description>If this item is part of a kit, then the GDW Unique Key of the kit&apos;s header row will be in this field.</description>
        <label>Kit Header GDW Unique Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KitLocalSKU__c</fullName>
        <label>Kit Local SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalCurrencyCode__c</fullName>
        <label>Local Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalCurrencyDiscount__c</fullName>
        <label>Local Currency Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocalCurrencyPreciousMetalsValue__c</fullName>
        <label>Local Currency Precious Metals Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocalCurrencyPrice__c</fullName>
        <label>Local Currency Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocalSKUKey__c</fullName>
        <externalId>true</externalId>
        <label>LocalSKUKey</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneSF_Id__c</fullName>
        <externalId>true</externalId>
        <label>OneSF Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderedByCimId__c</fullName>
        <label>Ordered By CIM ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Our_Reference__c</fullName>
        <label>Our Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaidByCimId__c</fullName>
        <label>Paid By CIM ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PatientCaseId__c</fullName>
        <label>Patient Case Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PracticeId__c</fullName>
        <label>Practice Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sales Analytics</relationshipLabel>
        <relationshipName>Sales_Analytics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Element__c</fullName>
        <label>Project Element</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchasing_Contract_External_ID__c</fullName>
        <label>Purchasing Contract External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBU__c</fullName>
        <label>SBU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Implants</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesOrigin__c</fullName>
        <label>Sales Origin</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Attribute_1__c</fullName>
        <label>Sales Attribute 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Attribute_2__c</fullName>
        <label>Sales Attribute 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Attribute_3__c</fullName>
        <label>Sales Attribute 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_History_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Sales History External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sales_Type__c</fullName>
        <description>Value Definition:
I = Internal - this is Intercompany sales between DS entities
E= External - this is regular customer sales
S = Samples
Internal = Internal - this is Intercompany sales between DS entities
External = External - this is regular customer sales
D= Dealer Discount (this value is still a bit undefined and believed to be only for SAP Bensheim)</description>
        <label>Sales Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteId__c</fullName>
        <label>Site Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceErpId__c</fullName>
        <label>Source ERP ID</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>IF( Quantity__c =0, Price__c , Price__c * Quantity__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Value (Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Value__c</fullName>
        <formula>IF( Quantity__c =0, Price__c , Price__c * Quantity__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>View_Wave_Data__c</fullName>
        <formula>&quot;true&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Wave Data</label>
        <type>Text</type>
    </fields>
    <label>Sales Analytics</label>
    <listViews>
        <fullName>All</fullName>
        <columns>LocalSKUKey__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllAX</fullName>
        <columns>NAME</columns>
        <columns>Address_Number__c</columns>
        <columns>Customer_Order_Number__c</columns>
        <columns>Discount_Amount__c</columns>
        <columns>Invoice_Number__c</columns>
        <columns>LocalSKUKey__c</columns>
        <columns>OneSF_Id__c</columns>
        <columns>Order_Type__c</columns>
        <columns>Price__c</columns>
        <columns>Quantity__c</columns>
        <columns>Sales_Attribute_1__c</columns>
        <columns>Sales_Attribute_3__c</columns>
        <columns>Sales_Attribute_4__c</columns>
        <columns>Sales_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LocalSKUKey__c</field>
            <operation>startsWith</operation>
            <value>Loc2</value>
        </filters>
        <label>All AX</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CACheck</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>LocalSKUKey__c</columns>
        <columns>CIM360Id__c</columns>
        <columns>Customer_Order_Number__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Line__c</columns>
        <columns>OneSF_Id__c</columns>
        <columns>Quantity__c</columns>
        <columns>Sales_History_External_ID__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_History_External_ID__c</field>
            <operation>startsWith</operation>
            <value>CA</value>
        </filters>
        <filters>
            <field>CIM360Id__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>OneSF_Id__c</field>
            <operation>equals</operation>
        </filters>
        <label>CA Check</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Created_today</fullName>
        <columns>NAME</columns>
        <columns>CompanyCode__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ERPNumber__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>OneSF_Id__c</columns>
        <columns>Account__c</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Quantity__c</columns>
        <columns>Total_Value__c</columns>
        <columns>SalesOrigin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CompanyCode__c</field>
            <operation>equals</operation>
            <value>394</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created today</label>
        <sharedTo>
            <role>Dentsply_IH_CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Last_Three_Days_Sales</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Date__c</columns>
        <columns>LocalSKUKey__c</columns>
        <columns>OneSF_Id__c</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Price__c</columns>
        <columns>Quantity__c</columns>
        <columns>Total_Value__c</columns>
        <columns>Sales_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Invoice_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:2</value>
        </filters>
        <label>Last Three Days Sales</label>
    </listViews>
    <nameField>
        <displayFormat>ASH{0000000000}</displayFormat>
        <label>Sales Analytics Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Analytics</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>